--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,53 @@
-accelerate==0.33.0
 aiohappyeyeballs==2.4.3
-aiohttp==3.10.10
+aiohttp==3.11.7
 aiosignal==1.3.1
 attrs==24.2.0
-audioread==3.0.1
-certifi==2024.7.4
-cffi==1.16.0
-charset-normalizer==3.3.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
 colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
 datasets==2.21.0
-decorator==5.1.1
 dill==0.3.8
-filelock==3.15.4
+filelock==3.16.1
+fonttools==4.55.0
 frozenlist==1.5.0
 fsspec==2024.6.1
-huggingface-hub==0.24.5
-idna==3.7
-intel-openmp==2021.4.0
+huggingface-hub==0.26.2
+idna==3.10
 Jinja2==3.1.4
-joblib==1.4.2
-lazy_loader==0.4
-librosa==0.10.2.post1
-llvmlite==0.43.0
-MarkupSafe==2.1.5
-mkl==2021.4.0
+kiwisolver==1.4.7
+MarkupSafe==3.0.2
+matplotlib==3.9.2
 mpmath==1.3.0
-msgpack==1.0.8
 multidict==6.1.0
 multiprocess==0.70.16
-networkx==3.3
-numba==0.60.0
-numpy==1.26.4
-packaging==24.1
+networkx==3.4.2
+numpy==2.1.3
+opencv-python==4.10.0.84
+packaging==24.2
 pandas==2.2.3
-pillow==10.2.0
-platformdirs==4.2.2
-pooch==1.8.2
+pillow==11.0.0
 propcache==0.2.0
-psutil==6.0.0
+psutil==6.1.0
+py-cpuinfo==9.0.0
 pyarrow==18.0.0
-pycparser==2.22
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
-PyYAML==6.0.1
-regex==2024.7.24
+PyYAML==6.0.2
 requests==2.32.3
-safetensors==0.4.3
-samplerate==0.2.1
-scikit-learn==1.5.1
-scipy==1.14.0
+scipy==1.14.1
+seaborn==0.13.2
 six==1.16.0
-sounddevice==0.4.7
-soundfile==0.12.1
-soxr==0.4.0
 sympy==1.13.1
-tbb==2021.13.0
-threadpoolctl==3.5.0
-tokenizers==0.19.1
-torch==2.5.1+cu124
-torchaudio==2.5.1+cu124
-torchvision==0.20.1+cu124
-tqdm==4.66.4
-transformers==4.42.4
+torch==2.5.1
+torchvision==0.20.1
+tqdm==4.67.0
 typing_extensions==4.12.2
 tzdata==2024.2
-urllib3==2.2.2
+ultralytics==8.3.35
+ultralytics-thop==2.0.12
+urllib3==2.2.3
 xxhash==3.5.0
-yarl==1.17.1
+yarl==1.18.0
